# whetstone

./: Cargo.toml  LICENSE  README.md
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/config/: mod.rs  module.rs  perforce.rs  rdedup.rs
lib/src/engines/: mod.rs  perforce.rs  rdedup.rs
lib/src/infrastructure/: mod.rs
src/: main.rs
