[package]
name = "whetstone-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
with-perforce = [ "p4-cmd" ]
with-rdedup = [ "rdedup-lib" ]

[lib]
name = "whetstone_lib"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
p4-cmd = { git = "https://github.com/Natsirtt/p4-cmd.git", optional = true }
rdedup-lib = { git = "https://github.com/Natsirtt/rdedup.git", features = ["default"], optional = true }
dunce = "1.0.5"
strum = { version = "0.27", features = ["derive"] }
url = "2.5.4"